--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@types/styled-components": "^5.1.25",
+    "@types/styled-components-react-native": "^5.1.3",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "octokit": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
