--- a/package.json
+++ b/package.json
@@ -4,28 +4,44 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "start-clear": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
+    "@octokit/core": "^3.6.0",
+    "@react-native-picker/picker": "2.4.0",
     "@types/styled-components": "^5.1.25",
     "@types/styled-components-react-native": "^5.1.3",
+    "babel-plugin-inline-dotenv": "^1.7.0",
+    "dotenv": "^16.0.1",
+    "eslint-plugin-react": "^7.30.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
-    "octokit": "^1.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-autocomplete-dropdown": "^2.0.6",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-web": "0.17.7",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.66.13",
-    "typescript": "~4.3.5"
+    "@types/jest": "^28.1.4",
+    "@types/react": "^18.0.14",
+    "@types/react-native": "^0.69.1",
+    "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
+    "eslint": "^8.18.0",
+    "react-native-typescript-transformer": "^1.2.13",
+    "ts-jest": "^28.0.5",
+    "typescript": "^4.7.4"
   },
   "private": true
 }
