--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "@octokit/core": "^3.6.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-picker/picker": "2.4.0",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "@types/styled-components": "^5.1.25",
     "@types/styled-components-react-native": "^5.1.3",
     "babel-plugin-inline-dotenv": "^1.7.0",
@@ -26,6 +29,8 @@
     "react-native-autocomplete-dropdown": "^2.0.6",
     "react-native-dotenv": "^3.3.1",
     "react-native-dropdown-picker": "^5.4.2",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "styled-components": "^5.3.5",
     "zustand": "^4.0.0-rc.1"
