--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "test": "jest",
     "eject": "expo eject"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
     "@octokit/core": "^3.6.0",
@@ -23,6 +27,8 @@
     "eslint-plugin-react": "^7.30.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "jest": "^26.6.3",
+    "jest-expo": "^45.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
