--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
+    "readme-md-generator": "^1.0.0",
     "styled-components": "^5.3.5",
     "zustand": "^4.0.0-rc.1"
   },
