Added tests for useIsseusDashboardLogic

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "eject": "expo eject"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "setupFiles": ["./jest-setup.ts"]
   },
   "dependencies": {
     "@octokit/core": "^3.6.0",
